fixed overflowing container

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 html,
-body *::before,
-body *::after {
-	box-sizing: border-box;
+body,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 	font-family: 'Rubik', sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
@@ -22,7 +23,7 @@ h1 {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	width: 100%;
+	max-width: 100%;
 	min-height: 100vh;
 	text-align: center;
 	padding: 2rem;
